Added Inactive Users to the Stats Controller
